<resources>
    <string name="hello">Hello World, VampiDroid!</string>
    <string name="app_name">VampiDroid</string>
	<string name="card_name">Card Name</string>
	<string name="searchLabel">Vampidroid</string>
	<string name="searchHint">Search Cards Text</string>
	<!-- <string name="search_hint">Search Cards</string> -->
	<string name="search_cards_text">Search Cards Text</string>
	<string name="share_cards_text">Share Cards Text</string>
	<string name="share_library_card_text">Share Library Card Text</string>
	<string name="share_crypt_card_text">Share Crypt Card Text</string>

	<string name="preferences">Preferences</string>
	<string name="about">About</string>
	<string name="clear_recent_searches">Clear recent searches</string>
	<string name="help">Filters Help</string>
	<string name="show_hide_filters">Show/Hide Advanced Filters</string>
	<string name="add_favorite_card">Add card to favorites</string>
	<string name="remove_favorite_card">Remove card from favorites</string>
	<string name="show_favorite_cards">Show favorite cards</string>
	<string name="show_decks">Show decks</string>
	<string name="add_new_deck">Add new deck</string>

	<string name="share_deck_cards_text">Share deck cards</string>

	<string name="remove_deck">Remove deck</string>

	<string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_card_details">Card Details</string>
    <string name="title_activity_card_image">CardImageActivity</string>

	<string name="pref_search_card_text">pref_searchCardText</string>
	<string name="pref_local_card_images_folder">pref_cardImagesFolder</string>
	<string name="pref_remote_card_images_folder">pref_remoteCardImagesFolder</string>
	<string name="pref_show_cards_count_tab_header">pref_showCardsCountTabHeader</string>
	<string name="pref_use_local_card_images_folder">pref_useLocalCardImagesFolder</string>

	<string name="search_bar_filter_card_name">Filter card name...</string>
	<string name="search_bar_filter_card_name_and_card_text">Filter card name and text...</string>

	<string name="about_description">
		<![CDATA[
		<p>
			VampiDroid is an Android app to search and organize cards of Jyhad™, Vampire: The Eternal Struggle™!
			<br />
			<br />
			For more information about VTES, checkout this site:
			<br />
			<br />
			<a href="http://www.vekn.net/">http://www.vekn.net/</a>
			<br />
			<br />
			Disclaimer: Jyhad™, Vampire: The Eternal Struggle™ and all game symbols are trademarks of Wizards of the Coast, Inc. and CCP hf. White Wolf, World of Darkness and all related terms are trademarks of CCP hf. This product is not published nor endorsed by CCP hf.

		</p>
		]]>
	</string>
</resources>
