<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Search Options">
        <!--<CheckBoxPreference android:key="@string/pref_search_card_text" android:title="Search Card Text?" android:summary="Use this to search card text and card name at the same time">-->
        <!--</CheckBoxPreference>-->
        <SwitchPreferenceCompat android:key="@string/pref_search_card_text" android:title="Search Card Text?" android:summary="Set this to search card text and card name at the same time in the search box">
        </SwitchPreferenceCompat>

    </PreferenceCategory>

    <PreferenceCategory android:title="Card images Options">

        <SwitchPreferenceCompat
            android:key="@string/pref_use_local_card_images_folder"
            android:defaultValue="true"
            android:title="Use local or remote folder?"
            android:summaryOn="Using local folder for card images source"
            android:summaryOff="Using remote folder for card images source"
            >
        </SwitchPreferenceCompat>
        <!--Reference: http://stackoverflow.com/questions/5298370/how-to-add-a-button-to-a-preferencescreen-android-->
        <Preference android:title="Local card images folder"
            android:key="@string/pref_local_card_images_folder"
            android:summary="Default image folder"/>
        <Preference android:title="Remote card images folder"
            android:key="@string/pref_remote_card_images_folder"
            android:summary="Card images folder located in a server"/>
        <Preference android:title="Images help"
            android:summary="Card images have to be in the format: cardname.jpg Find card images ready to be used in the ardb project. Click here to be redirected there."
            android:persistent="false"
            >
            <intent  android:action="android.intent.action.VIEW"
                android:data="https://code.google.com/archive/p/ardb/downloads"/>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="List Options">
        <SwitchPreferenceCompat android:key="@string/pref_show_cards_count_tab_header" android:title="Show cards count in tab header?" android:summary="Set this to show the number of cards in the tab header">
        </SwitchPreferenceCompat>

    </PreferenceCategory>
</PreferenceScreen>
